tests/error/tracing_errors/linear_not_owned1.err
Error: Error in comptime function return (at $FILE:10:0)
   | 
 8 | 
 9 | @guppy.comptime(module)
10 | def test(q: qubit) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |     measure(q)
   | ^^^^^^^^^^^^^^

Argument `q` is borrowed, so it is implicitly returned to the caller. Value with
non-copyable type `qubit` was already used

Previous use occurred in linear_not_owned1.py:11 as an argument to `measure`.

Guppy compilation failed due to 1 previous error
